MDEV-7831 Bad warning for DATE_ADD(timestamp_column, INTERVAL 10 SECOND)